[package]
name = "eltor_app"
version = "0.1.0"
edition = "2021"

[dependencies]
libtor = { path = "../libtor" }
libtor-sys = { git = "https://github.com/el-tor/libeltor-sys", branch = "master", version = "47.13.0+0.4.7.x"}
# libtor-sys = { path = "../../libeltor-sys"  }
# libtor-sys = "^47.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3.31"
rand = "0.8"


[[bin]]
name = "eltor"
path = "eltor.rs"

[[bin]]
name = "getCircuits"
path = "getCircuits.rs"

[features]
vendored-openssl = ["libtor-sys/vendored-openssl"]